--- a/package.json
+++ b/package.json
@@ -3,8 +3,6 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-
-
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -16,6 +14,7 @@
     "@xenova/transformers": "^2.17.2",
     "compute-cosine-similarity": "^1.1.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "multer": "^2.0.2",
     "react": "^19.1.1",
